force-app/main/default/objects/JV_Type__mdt/JV_Type__mdt.object-meta.xml
<CustomObject>
    <label>JV Type</label>
    <pluralLabel>JV Types</pluralLabel>
</CustomObject>