force-app/main/default/objects/JV_Type__mdt/fields/adjusted_rule_class__c.field-meta.xml
<CustomField>
    <fullName>adjusted_rule_class__c</fullName>
    <label>adjusted rule class</label>
    <length>5</length>
    <type>Text</type>
</CustomField>