force-app/main/default/objects/JV_Type__mdt/fields/clearing_account__c.field-meta.xml
<CustomField>
    <fullName>clearing_account__c</fullName>
    <label>clearing account</label>
    <length>42</length>
    <type>Text</type>
</CustomField>