force-app/main/default/objects/JV_Type__mdt/fields/Rule_Class__c.field-meta.xml
<CustomField>
    <fullName>Rule_Class__c</fullName>
    <label>Rule Class</label>
    <length>5</length>
    <type>Text</type>
</CustomField>